# yanshi

./: .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  CURRENT_STATUS.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PR_DESCRIPTION.md  README.md  package.json  pnpm-lock.yaml
.playwright-mcp/: page-2026-06-08T04-38-41-050Z.yml  page-2026-06-08T04-39-45-835Z.yml  page-2026-06-08T04-40-02-730Z.yml  page-2026-06-08T18-57-13-809Z.yml  page-2026-06-08T18-57-20-439Z.yml  (+13 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs
runtime/python/: pyproject.toml  sidecar_main.py
runtime/python/evals/: README.md  cases.jsonl  run_evals.py  scorer.py
runtime/python/tests/: test_eval_runner.py  test_eval_scorer.py  test_runtime.py
runtime/python/tests/fixtures/: fake_mcp_server.py
runtime/python/yanshi_runtime/: acp.py  config.py  mcp_client.py  models.py  net_guard.py  secrets.py  storage.py
runtime/python/yanshi_runtime/agents/: __init__.py  profiles.py
runtime/python/yanshi_runtime/approvals/: __init__.py  policy.py
runtime/python/yanshi_runtime/graph/: __init__.py  runtime_graph.py
runtime/python/yanshi_runtime/providers/: __init__.py  anthropic.py  base.py  openai_compatible.py
runtime/python/yanshi_runtime/server/: app.py
runtime/python/yanshi_runtime/tools/: __init__.py  base.py  browser_tool.py  computer_tool.py  file_tool.py  terminal_tool.py
runtime/python/yanshi_runtime/workshop/: __init__.py  packs.py
(+244 files in other folders)
