[project]
name = "yanshi-runtime"
version = "0.1.0"
description = "Yanshi Runtime sidecar for the macOS desktop workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.124.0",
  "httpx>=0.28.1",
  "langgraph>=1.0.8",
  "langgraph-checkpoint-sqlite>=3.0.1",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
browser = ["playwright>=1.57.0"]

[project.scripts]
yanshi-runtime = "yanshi_runtime.server.app:main"

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
