[package]
name = "yanshi-desktop"
version = "0.1.0"
description = "Yanshi macOS desktop shell"
authors = ["Yanshi"]
edition = "2021"

[lib]
name = "yanshi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-opener = "2.5.0"
tauri-plugin-shell = "2.3.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
